@@ -1,3 +1,8 @@
+2007-03-16  Kai Tietz  <Kai.Tietz@onevision.com>
+
+	* dlltool.c (make_one_lib_file): Use pc-relative relocation
+	instead of an absolute relocation for x86_64-pc-mingw32 target.
+
 2007-03-15  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* Makefile.am (REPORT_BUGS_TO): Removed.
